--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -338,10 +338,6 @@ In a separate study, we will test our adapted paradigm together with a \emph{n}-
 
 {[}INSERT FIGURE 1 HERE{]}
 
-\begin{figure}
-\includegraphics[width=\textwidth]{figures/Paradigm_Scheme_T2} \caption{Exemplary visualization of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can be represented by our paradigm. Figure available at https://osf.io/vnj8x/, under a CC-BY4.0 license.}\label{fig:ResponsePatterns}
-\end{figure}
-
 The aim of the present study is to evaluate whether this paradigm is suitable for determining SVs of ER strategies.
 As a manipulation check, we first want to investigate whether the valence of the pictures is affecting subjective and physiological responding, resulting in lower subjective arousal ratings after and lower EMG activity during neutral compared to negative pictures.
 Second, we want to check whether the ER strategies distraction, distancing, and suppression effectively reduce subjective arousal and physiological responding compared to the active viewing condition.
@@ -410,7 +406,7 @@ Implicit theories of willpower in emotion control was assessed using the implici
 To assess Need for Cognition, the German version short form of the Need for Cognition Scale\textsuperscript{28,52} was used.
 To assess self-control\textsuperscript{53}, sum scores of the German versions of the following questionnaires were used: the Self-Regulation Scale (SRS)\textsuperscript{54}, the Brief Self-Control Scale (BSCS)\textsuperscript{55,56}, and the Barratt Impulsiveness Scale (BIS-11)\textsuperscript{57,58}.
 Attentional control were assessed using the Attentional Control Scale (ACS)\textsuperscript{59}.
-For more detailed information on psychometric properties of the questionnaires, please see the \protect\hyperlink{SupplementQuestionnaires}{supplementary material}.
+For more detailed information on psychometric properties of the questionnaires, please see the supplementary material.
 
 \hypertarget{emotion-regulation-paradigm}{%
 \subsubsection{2.3.2 Emotion regulation paradigm}\label{emotion-regulation-paradigm}}
@@ -460,10 +456,6 @@ As soon as they have decided, they saw the respective instruction and the block 
 
 {[}INSERT FIGURE 2 HERE{]}
 
-\begin{figure}
-\includegraphics[width=\textwidth]{figures/Design_ER-ED} \caption{Block design of the paradigm. Every participant starts with two "active viewing" blocks continaing neutral (Block 1) and negative (Block 2) pictures. Order of the regulation blocks (Blocks 3, 4, and 5) was randomized between participants. After, the discounting procedure took place. All three regulation strategies were compared pairwise. Before the last block, participants could decide which regulation strategy they wanted to reapply. Subjective arousal and effort ratings were assessed after each block using a slider on screen with a continuous scale. Figure available at https://osf.io/vnj8x/, under a CC-BY4.0 license.}\label{fig:DesignERED}
-\end{figure}
-
 \hypertarget{stimuli}{%
 \subsubsection{2.3.3 Stimuli}\label{stimuli}}
 
@@ -499,7 +491,7 @@ Power analyses of all other hypotheses yielded smaller sample sizes.
 However, if participants withdraw from study participation, technical failures occur, or experimenter considers the participant for not suitable for study participation (e.g., because the participant does not follow instructions or shows great fatigue), respective data will also be excluded from further analyses.
 Therefore, we aimed to collect data of \(N=120\) participants, about \(50%
 \) more data sets, than necessary.
-Detailed information on power calculation for each hypothesis can be found in the \protect\hyperlink{DesignTable}{design table}.
+Detailed information on power calculation for each hypothesis can be found in the design table.
 
 \hypertarget{analysis-plan}{%
 \subsection{2.5 Analysis plan}\label{analysis-plan}}
@@ -599,14 +591,14 @@ Please note that sample size for individual calculations may be smaller due to f
 To explore whether negative pictures evoke emotional arousal and physiological responding, we conducted separate rmANOVAs for the active viewing condition with predictors subjective arousal, \emph{corrugator} and \emph{levator} activity.
 Descriptive values of each predictor for each condition can be found in Table \ref{tab:TabDescr}.
 We found a significant main effect of valence for subjective arousal (\(F(1, 119) = 399.95\), \(p < .001\), \(\hat{\eta}^2_G = .589\), 90\% CI \([.498, .659]\), \(\mathrm{BF}_{\textrm{10}} = 2.76 \times 10^{48}\)), \emph{corrugator} activity (\(F(1, 117) = 27.73\), \(p < .001\), \(\hat{\eta}^2_G = .111\), 90\% CI \([.037, .206]\), \(\mathrm{BF}_{\textrm{10}} = 8.05 \times 10^{18}\)), and \emph{levator} activity (\(F(1, 117) = 8.87\), \(p = .004\), \(\hat{\eta}^2_G = .039\), 90\% CI \([.002, .111]\), \(\mathrm{BF}_{\textrm{10}} = 251.32\)).
-Post-hoc contrasts indicated that negative pictures successfully increased emotional arousal and physiological responding (please see Tables \ref{tab:SupplEffectArousalView} to @ref(tab:SupplEffectLevView and Figures \ref{fig:SupplFigArousalView} to \ref{fig:SupplFigLevView} in the {[}supplement{]}).
+Post-hoc contrasts indicated that negative pictures successfully increased emotional arousal and physiological responding (please see Tables S.4 to S.6 and Figures S.1 to S.3 in the supplementary material).
 
 \hypertarget{effect-of-emotion-regulation-on-arousal-and-facial-emg}{%
 \paragraph{Effect of emotion regulation on arousal and facial EMG}\label{effect-of-emotion-regulation-on-arousal-and-facial-emg}}
 
 To investigate whether ER strategies reduce emotional arousal and physiological responding, we conducted separate rmANOVAs comparing the four instructed strategies (active viewing, distraction, distancing, suppression) with respect to subjective arousal, \emph{corrugator} and \emph{levator} activity.
 We found a significant effect of strategy for subjective arousal (\(F(2.71, 322.55) = 7.39\), \(p < .001\), \(\hat{\eta}^2_G = .015\), 90\% CI \([.000, .036]\), \(\mathrm{BF}_{\textrm{10}} = 157.74\)), \emph{corrugator} activity (\(F(1.76, 206.02) = 13.70\), \(p < .001\), \(\hat{\eta}^2_G = .056\), 90\% CI \([.019, .094]\), \(\mathrm{BF}_{\textrm{10}} = 1.96 \times 10^{10}\)), and \emph{levator} activity (\(F(1.54, 180.41) = 19.95\), \(p < .001\), \(\hat{\eta}^2_G = .089\), 90\% CI \([.043, .134]\), \(\mathrm{BF}_{\textrm{10}} = 7.82 \times 10^{18}\)), indicating that regulation strategies reduced subjective arousal and physiological responding.
-For detailed information on post-hoc contrasts, please see Tables \ref{tab:SupplEffectArousalReg} to \ref{tab:SupplEffectLevReg} and Figures \ref{fig:SupplFigArousalReg} to \ref{fig:SupplFigLevReg} in the \protect\hyperlink{SupplementEffectER}{supplementary material}.
+For detailed information on post-hoc contrasts, please see Tables S.7 to S.9 and Figures S.4 to S.6 in the supplementary material.
 
 {[}INSERT TABLE 1 HERE{]}
 
@@ -642,10 +634,6 @@ Post-hoc contrasts showed significantly higher subjective effort for distraction
 Moreover, we found significantly lower effort during suppression compared with distraction (\(t(357) = 5.66\), \(p_\mathrm{\scriptsize Tukey(4)} < .001\), \(\mathrm{BF}_{\textrm{10}} = 1.61 \times 10^{6}\)) and distancing (\(t(357) = 3.55\), \(p_\mathrm{\scriptsize Tukey(4)} = .002\), \(\mathrm{BF}_{\textrm{10}} = 29.19\)).
 
 {[}INSERT FIGURE 3 HERE{]}
-
-\begin{figure}[H]
-\includegraphics[width=\textwidth]{figures/FigSubjEffort} \caption{Subjective effort ratings vizalized as boxplots. Dots represent individual effort ratings placed in 150 quantiles. Figure available at https://osf.io/vnj8x/, under a CC-BY-4.0 license.}\label{fig:FigSubjEffort}
-\end{figure}
 
 Cognitive effort also played the most important role in the subsequent choice decision, which resembled previous findings of our group\textsuperscript{22}.
 45.40\% of the participants stated that they chose the strategy that was easiest for them to implement.
@@ -718,10 +706,6 @@ There was a significant association between predicted choice and actual choice (
 
 {[}INSERT FIGURE 4 HERE{]}
 
-\begin{figure}[H]
-\includegraphics[width=\textwidth]{figures/FigSVChoice} \caption{Individual subjective values per ER strategy, grouped by choice in last experimental block. Each dot indicates SV of one particpant, the colours indicate their choice in last experimental block. The scatter has a horizontal jitter of 0.40 and a vertical jitter of 0.05. $N=120$. Figure available at https://osf.io/vnj8x/, under a CC-BY-4.0 license.}\label{fig:FigSVChoice}
-\end{figure}
-
 We then conducted an ordinal regression with the dependent variable ``choice'' and the individual SVs of all three strategies as independent variables.
 Overall model fit was fair with \(R^{2}=\) 0.27.
 The SV of the strategy distraction contributed significantly to the model (\(b = -6.29\), 95\% CI \([-10.81, -3.02]\), \(z = -3.21\), \(p = .001\), \(BF10=\) 2.00).
@@ -749,7 +733,7 @@ SV \sim \text{effort rating} + \text{utility rating} + corrugator \text{ activit
 As expected, the predictors effort rating (\(\hat{\beta} = -0.001\), 95\% CI \([-0.001, -0.001]\), \(t(5,620.93) = -14.26\), \(p < .001\)) showed a negative association with SVs, while utility rating (\(\hat{\beta} = 0.001\), 95\% CI \([0.001, 0.002]\), \(t(5,620.93) = 33.28\), \(p < .001\)), and \emph{corrugator} activity (\(\hat{\beta} = 0.008\), 95\% CI \([0.001, 0.015]\), \(t(5,620.93) = 2.12\), \(p = .034\)) showed a significant positive association with SVs.
 In addition, a positive association was also found between self-control and SVs (\(\hat{\beta} = 0.024\), 95\% CI \([0.001, 0.048]\), \(t(97.97) = 2.04\), \(p = .044\)).
 However, the effect size of self-control was negligibly small (\(f^{2}=\) 0.002).
-Detailed information can be found in the \protect\hyperlink{SupplementExploratory}{supplementary material}.
+Detailed information can be found in the supplementary material.
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
@@ -1263,18 +1247,6 @@ Finally, further research is needed to investigate the factors that influence su
 \CSLLeftMargin{90. }%
 \CSLRightInline{Bialaszek, W., Marcowski, P. \& Ostaszewski, P. \href{https://doi.org/ARTN\%20e0182353\%0A10.1371/journal.pone.0182353}{Physical and cognitive effort discounting across different reward magnitudes: Tests of discounting models}. \emph{Plos One} \textbf{12}, (2017).}
 
-\leavevmode\vadjust pre{\hypertarget{ref-Preece2020}{}}%
-\CSLLeftMargin{91. }%
-\CSLRightInline{Preece, D. A., Becerra, R., Robinson, K. \& Gross, J. J. \href{https://doi.org/10.1080/00223891.2018.1564319}{The emotion regulation questionnaire: Psychometric properties in general community samples}. \emph{J Pers Assess} \textbf{102}, 348--356 (2020).}
-
-\leavevmode\vadjust pre{\hypertarget{ref-Fleischhauer2010}{}}%
-\CSLLeftMargin{92. }%
-\CSLRightInline{Fleischhauer, M. \emph{et al.} \href{https://doi.org/10.1177/0146167209351886}{Same or different? {Clarifying} the relationship of need for cognition to personality and intelligence}. \emph{Personality \& Social Psychology Bulletin} \textbf{36}, 82--96 (2010).}
-
-\leavevmode\vadjust pre{\hypertarget{ref-Fleischhauer2015}{}}%
-\CSLLeftMargin{93. }%
-\CSLRightInline{Fleischhauer, M., Strobel, A. \& Strobel, A. \href{https://doi.org/10.1027/1614-0001/a000161}{Directly and indirectly assessed {N}eed for {C}ognition differentially predict spontaneous and reflective information processing behavior}. \emph{Journal of Individual Differences} \textbf{36}, 101--109 (2015).}
-
 \end{CSLReferences}
 
 \endgroup
@@ -1292,348 +1264,25 @@ The authors would like to thank Juliana Krause and Maja Hentschel for their help
 \section{Competing Interests}\label{competing-interests}}
 
 The authors declare no competing interests.
-\# Design Table \{\#DesignTable\}
 
-\includepdf[pages={-}, landscape=true]{Supplement/Design_Table_T2.pdf}
-
-\newpage
-
-\hypertarget{SupplementaryMaterial}{%
-\section{Supplementary Material}\label{SupplementaryMaterial}}
-
-\includepdf[pages={-}, landscape=true]{Supplement/StimList_Suppl.pdf}
-\counterwithin{figure}{section}
-\counterwithin{table}{section}
-\setcounter{section}{19}
-\setcounter{figure}{0}
-\setcounter{table}{1}
-\newpage
-
-\hypertarget{SupplementQuestionnaires}{%
-\subsection{Detailed information on psychometric measures}\label{SupplementQuestionnaires}}
-
-\emph{WHO-5.} General psychological well-being was assessed using the WHO-5 scale\textsuperscript{45,46}.
-Five items such as ``Over the past 2 weeks I have felt calm and relaxed.'' are rated on a 6-point Likert scale raning from 0 (at no time) to 5 (all of the time).
-The German version of the scale showed a high internal consistency (Cronbach's \(\alpha=.92\))\textsuperscript{46}.
-
-\emph{Connor-Davidson Resilience Scale.} Resilience was assessed using the Connor-Davidson Resilience Scale (CD-RISC)\textsuperscript{47--49}.
-Ten items such as ``I am able to adapt to change.'' are rated on a scale from 0 (not true at all) to 4 (true nearly all the time).
-The 10-item version showed a high internal consistency (Cronbach's \(\alpha=.84\)) and a satisfactory retest-reliability of \(r_{tt}=.81\) across 6 months\textsuperscript{49}.
-
-\emph{Emotion Regulation Questionnaire.} Habitual use of reappraisal and suppression was measured using the 10-item Emotion Regulation Questionnaire (ERQ)\textsuperscript{9,50}.
-The scale has items such as ``I keep my emotions to myself'' (ERQ-suppression - 4 items) and ``When I'm faced with a stressful situation, I make myself think about it in a way that helps me stay calm'' (ERQ-reappraisal - 6 items), which are answered on a 7-point Likert scale ranging from 1 (strongly disagree) to 7 (strongly agree), and has acceptable to high internal consistency (Cronbach's \(\alpha>.75\))\textsuperscript{91}.
-
-\emph{FlexER Scale.} Flexible use of ER strategies is assessed using the FlexER Scale\textsuperscript{44} with items such as ``If I want to feel less negative emotions, I have several strategies to achieve this.'', which are answered on a 4-point scale ranging from ``strongly agree'' to ``strongly disagree''.
-Psychometric properties are currently under investigation.
-
-\emph{Implicit Theories Questionnaire.} Implicit theories of willpower in emotional control were assessed using the Implicit Theories Questionnaire of Bernecker and Job\textsuperscript{51}.
-Four items such as ``Having to control a strong emotion makes you exhausted and you are less able to manage your feelings right afterwards.'' are rated on a 6-point scale ranging from 1 (fully agree) to 6 (do not agree at all).
-The questionnaire showed an internal consistency of Cronbach's \(\alpha=.87\)\textsuperscript{51}.
-
-\emph{Need for Cognition Scale.} Need for Cognition (NFC) was assessed with the 16-item short version of the German NFC scale\textsuperscript{52}.
-Responses to each item (e.g., ``Thinking is not my idea of fun'', recoded) are recorded on a 7-point Likert scale ranging from -3 (completely disagree) to +3 (completely agree) and are summed to the total NFC score.
-The scale shows comparably high internal consistency (Cronbach's \(\alpha>.80\))\textsuperscript{52,92} and a retest reliability of \(r_{tt}=.83\) across 8 to 18 weeks\textsuperscript{93}.
-
-\emph{Self-Regulation Scale.} As one measure of self-control, the Self-Regulation Scale (SRS)\textsuperscript{54} was used. The scale has 10 items (e.g., ``It is difficult for me to suppress thoughts that interfere with what I need to do.'', recoded) on a 4-point scale ranging from 1 (not at all true) to 4 (exactly true).
-It has high internal consistency (Cronbach's \(\alpha>.80\))\textsuperscript{54}.
-
-\emph{Brief Self-Control Scale.} As a second measure of self-control, the Brief Self-Control Scale (BSCS)\textsuperscript{55,56} was used.
-It comprises 13 items (e.g., ``I am good at resisting temptations'') with a 5-point rating scale ranging from 1 (not at all like me) to 5 (very much like me).
-The scale shows acceptable internal consistency (Cronbach's \(\alpha=.81\))\textsuperscript{56}.
-
-\emph{Barratt Impulsiveness Scale.} As a third measure of self-control, the Barratt Impulsiveness Scale (BIS-11)\textsuperscript{57,58} was used.
-Responses to each item (e.g., ``I am self-controlled.'', recoded) are assessed on a 4-point scale ranging from 1 (never/rarely) to 4 (almost always/always).
-An internal consistency of Cronbach's \(\alpha=.74\) and a retest reliability of \(r_{tt}=.56\) for General Impulsiveness and \(r_{tt}=.66\) for Total Score across 6 month were reported\textsuperscript{58}.
-
-\emph{Attentional Control Scale.} Attentional control was measured using the Attentional Control Scale (ACS)\textsuperscript{59} with items such as ``My concentration is good even if there is music in the room around me''.
-The 20 items are rated on a 4-point scale ranging from 1 (almost never) to 4 (always).
-An internal consistency of Cronbach's \(\alpha=.88\) was reported\textsuperscript{59}.
-
-\newpage
-
-\hypertarget{SupplementNV}{%
-\subsection{Test for normal distribution of predictor variables}\label{SupplementNV}}
-
-\begin{table}[H]
-
-\begin{center}
-\begin{threeparttable}
-
-\caption{\label{tab:TabNVRatings}Results of Shapiro-Wilk test for normal distribution of subjective arousal and effort ratings for all strategies.}
-
-\begin{tabular}{lllll}
-\toprule
- & \multicolumn{1}{c}{$M$} & \multicolumn{1}{c}{$SD$} & \multicolumn{1}{c}{$W$} & \multicolumn{1}{c}{$p$}\\
-\midrule
-Arousal View Neu & 26.629 & 39.116 & 0.677 & <.001\\
-Arousal View Neg & 187.778 & 87.308 & 0.979 & 0.057\\
-Arousal Distraction & 158.129 & 92.492 & 0.972 & 0.014\\
-Arousal Distancing & 168.617 & 95.754 & 0.978 & 0.043\\
-Arousal Suppression & 163.957 & 87.165 & 0.980 & 0.073\\
-Effort View Neu & 18.147 & 27.372 & 0.651 & <.001\\
-Effort View Neg & 49.396 & 62.262 & 0.740 & <.001\\
-Effort Distraction & 208.465 & 96.149 & 0.983 & 0.132\\
-Effort Distancing & 158.259 & 99.505 & 0.969 & 0.007\\
-Effort Suppression & 189.800 & 92.338 & 0.983 & 0.123\\
-\bottomrule
-\end{tabular}
-
-\end{threeparttable}
-\end{center}
-
-\end{table}
-
-\begin{table}[H]
-
-\begin{center}
-\begin{threeparttable}
-
-\caption{\label{tab:TabNCEMG}Results of Shapiro-Wilk test for normal distribution of Corrugator and Levator activity for all strategies.}
-
-\begin{tabular}{lllll}
-\toprule
- & \multicolumn{1}{c}{$M$} & \multicolumn{1}{c}{$SD$} & \multicolumn{1}{c}{$W$} & \multicolumn{1}{c}{$p$}\\
-\midrule
-Corrugator View Neu & 0.041 & 6.991 & 0.046 & <.001\\
-Corrugator View Neg & 1.030 & 7.213 & 0.194 & <.001\\
-Corrugator Distraction & 0.004 & 7.668 & 0.040 & <.001\\
-Corrugator Distancing & 0.066 & 3.784 & 0.083 & <.001\\
-Corrugator Suppression & 0.246 & 1.924 & 0.354 & <.001\\
-Levator View Neu & 0.090 & 1.838 & 0.384 & <.001\\
-Levator View Neg & 0.580 & 3.198 & 0.429 & <.001\\
-Levator Distraction & -0.050 & 1.157 & 0.520 & <.001\\
-Levator Distancing & -0.027 & 0.917 & 0.481 & <.001\\
-Levator Suppression & 0.010 & 0.996 & 0.554 & <.001\\
-\bottomrule
-\end{tabular}
-
-\end{threeparttable}
-\end{center}
-
-\end{table}
-
-\newpage
-
-\hypertarget{SupplementEffectValence}{%
-\subsection{Post-hoc contrasts for effects of valence on subjective arousal and physiological responding}\label{SupplementEffectValence}}
-
-\begin{table}[H]
-
-\begin{center}
-\begin{threeparttable}
-
-\caption{\label{tab:SupplEffectArousalView}Post-hoc contrasts for effects of valence on subjective arousal ratings in the active viewing conditions.}
-
-\footnotesize{
-
-\begin{tabular}{lllllllll}
-\toprule
-Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\mathrm{BF}_{\textrm{10}}$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
-\midrule
-$View_{neutral} - View_{negative}$ & -161.15 & 8.06 & 119.00 & -20.00 & <.001 & $3.22 \times 10^{36}$ & 0.77 & {}[0.72, 1.00]\\
-\bottomrule
-\end{tabular}
-
-}
-
-\end{threeparttable}
-\end{center}
-
-\end{table}
+\hypertarget{figures}{%
+\section{Figures}\label{figures}}
 
 \begin{figure}[H]
-\includegraphics[width=\textwidth]{figures/FigSubjArousalView} \caption{Subjective arousal ratings of the active viewing conditions visualized as boxplots. Dots represent individual effort ratings placed in 150 quantiles.}\label{fig:SupplFigArousalView}
+\includegraphics[width=\textwidth]{figures/Paradigm_Scheme_T2} \caption{Exemplary visualization of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can be represented by our paradigm. Figure available at https://osf.io/vnj8x/, under a CC-BY4.0 license.}\label{fig:ResponsePatterns}
 \end{figure}
-
-\begin{table}[H]
-
-\begin{center}
-\begin{threeparttable}
-
-\caption{\label{tab:SupplEffectCorrView}Post-hoc contrasts for effects of valence on Corrugator activity in the active viewing conditions.}
-
-\footnotesize{
-
-\begin{tabular}{lllllllll}
-\toprule
-Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\mathrm{BF}_{\textrm{10}}$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
-\midrule
-$View_{neutral} - View_{negative}$ & -0.27 & 0.05 & 117.00 & -5.27 & <.001 & $8.67 \times 10^{16}$ & 0.19 & {}[0.10, 1.00]\\
-\bottomrule
-\end{tabular}
-
-}
-
-\end{threeparttable}
-\end{center}
-
-\end{table}
 
 \begin{figure}[H]
-\includegraphics[width=\textwidth]{figures/FigCorrView} \caption{Corrugator activity in mV during the active viewing conditions, visualized as boxplots. Dots represent individual Corrugator activity measures placed in 150 quantiles.}\label{fig:SupplFigCorrView}
+\includegraphics[width=\textwidth]{figures/Design_ER-ED} \caption{Block design of the paradigm. Every participant starts with two "active viewing" blocks continaing neutral (Block 1) and negative (Block 2) pictures. Order of the regulation blocks (Blocks 3, 4, and 5) was randomized between participants. After, the discounting procedure took place. All three regulation strategies were compared pairwise. Before the last block, participants could decide which regulation strategy they wanted to reapply. Subjective arousal and effort ratings were assessed after each block using a slider on screen with a continuous scale. Figure available at https://osf.io/vnj8x/, under a CC-BY4.0 license.}\label{fig:DesignERED}
 \end{figure}
-
-\begin{table}[H]
-
-\begin{center}
-\begin{threeparttable}
-
-\caption{\label{tab:SupplEffectLevView}Post-hoc contrasts for effects of valence on Levator activity in the active viewing conditions.}
-
-\footnotesize{
-
-\begin{tabular}{lllllllll}
-\toprule
-Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\mathrm{BF}_{\textrm{10}}$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
-\midrule
-$View_{neutral} - View_{negative}$ & -0.23 & 0.08 & 117.00 & -2.98 & <.001 & 188.72 & 0.07 & {}[0.01, 1.00]\\
-\bottomrule
-\end{tabular}
-
-}
-
-\end{threeparttable}
-\end{center}
-
-\end{table}
 
 \begin{figure}[H]
-\includegraphics[width=\textwidth]{figures/FigLevView} \caption{Levator activity in mV during the active viewing conditions, visualized as boxplots. Dots represent individual Levator activity measures placed in 150 quantiles.}\label{fig:SupplFigLevView}
+\includegraphics[width=\textwidth]{figures/FigSubjEffort} \caption{Subjective effort ratings visualized as boxplots. Dots represent individual effort ratings placed in 150 quantiles. Figure available at https://osf.io/vnj8x/, under a CC-BY-4.0 license.}\label{fig:FigSubjEffort}
 \end{figure}
-
-\newpage
-
-\hypertarget{SupplementEffectER}{%
-\subsection{Post-hoc contrasts for effects of ER strategies on subjective arousal and physiological responding}\label{SupplementEffectER}}
-
-\begin{table}[H]
-
-\begin{center}
-\begin{threeparttable}
-
-\caption{\label{tab:SupplEffectArousalReg}Post-hoc contrasts for effects of ER strategies on subjective arousal ratings.}
-
-\footnotesize{
-
-\begin{tabular}{lllllllll}
-\toprule
-Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
-\midrule
-$View_{neg} - Distraction$ & 29.649 & 6.680 & 357.000 & 4.439 & 0.000 & 168.484 & 0.05 & {}[0.02, 1.00]\\
-$View_{neg} - Distancing$ & 23.820 & 6.680 & 357.000 & 3.566 & 0.002 & 62.990 & 0.03 & {}[0.01, 1.00]\\
-$View_{neg} - Suppression$ & 19.161 & 6.680 & 357.000 & 2.869 & 0.026 & 1.965 & 0.02 & {}[0.00, 1.00]\\
-$Distraction - Distancing$ & -5.828 & 6.680 & 357.000 & -0.873 & 1.000 & 0.179 & 2.13e-03 & {}[0.00, 1.00]\\
-$Distraction - Suppression$ & -10.488 & 6.680 & 357.000 & -1.570 & 0.704 & 0.309 & 6.86e-03 & {}[0.00, 1.00]\\
-$Distancing - Suppression$ & -4.659 & 6.680 & 357.000 & -0.698 & 1.000 & 0.135 & 1.36e-03 & {}[0.00, 1.00]\\
-\bottomrule
-\end{tabular}
-
-}
-
-\end{threeparttable}
-\end{center}
-
-\end{table}
 
 \begin{figure}[H]
-\includegraphics[width=\textwidth]{figures/FigSubjArousalReg} \caption{Subjective arousal ratings visualized as boxplots. Dots represent individual effort ratings placed in 150 quantiles.}\label{fig:SupplFigArousalReg}
+\includegraphics[width=\textwidth]{figures/FigSVChoice} \caption{Individual subjective values per ER strategy, grouped by choice in last experimental block. Each dot indicates SV of one participant, the colours indicate their choice in last experimental block. The scatter has a horizontal jitter of 0.40 and a vertical jitter of 0.05. $N=120$. Figure available at https://osf.io/vnj8x/, under a CC-BY-4.0 license.}\label{fig:FigSVChoice}
 \end{figure}
-
-\begin{table}[H]
-
-\begin{center}
-\begin{threeparttable}
-
-\caption{\label{tab:SupplEffectCorrReg}Post-hoc contrasts for effects of ER strategies on Corrugator activity}
-
-\footnotesize{
-
-\begin{tabular}{lllllllll}
-\toprule
-Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
-\midrule
-$View_{neg} - Distraction$ & 0.178 & 0.037 & 351.000 & 4.788 & 0.000 & 21,919.73 & 0.06 & {}[0.03, 1.00]\\
-$View_{neg} - Distancing$ & 0.189 & 0.037 & 351.000 & 5.091 & 0.000 & 139,814.01 & 0.07 & {}[0.03, 1.00]\\
-$View_{neg} - Suppression$ & 0.210 & 0.037 & 351.000 & 5.669 & 0.000 & $1.84 \times 10^{7}$ & 0.08 & {}[0.04, 1.00]\\
-$Distraction - Distancing$ & 0.011 & 0.037 & 351.000 & 0.303 & 1.000 & $3.77 \times 10^{-2}$ & 2.61e-04 & {}[0.00, 1.00]\\
-$Distraction - Suppression$ & 0.033 & 0.037 & 351.000 & 0.881 & 1.000 & $8.02 \times 10^{-2}$ & 2.21e-03 & {}[0.00, 1.00]\\
-$Distancing - Suppression$ & 0.021 & 0.037 & 351.000 & 0.578 & 1.000 & $4.79 \times 10^{-2}$ & 9.51e-04 & {}[0.00, 1.00]\\
-\bottomrule
-\end{tabular}
-
-}
-
-\end{threeparttable}
-\end{center}
-
-\end{table}
-
-\begin{figure}[H]
-\includegraphics[width=\textwidth]{figures/FigCorrReg} \caption{Corrugator activity in mV visualized as boxplots. Dots represent individual Levatorr activity measures placed in 150 quantiles.}\label{fig:SupplFigCorrReg}
-\end{figure}
-
-\begin{table}[H]
-
-\begin{center}
-\begin{threeparttable}
-
-\caption{\label{tab:SupplEffectLevReg}Post-hoc contrasts for effects of ER strategies on Levator activity}
-
-\footnotesize{
-
-\begin{tabular}{lllllllll}
-\toprule
-Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
-\midrule
-$View_{neg} - Distraction$ & 0.336 & 0.050 & 351.000 & 6.731 & 0.000 & $2.02 \times 10^{11}$ & 0.11 & {}[0.07, 1.00]\\
-$View_{neg} - Distancing$ & 0.282 & 0.050 & 351.000 & 5.659 & 0.000 & $3.99 \times 10^{7}$ & 0.08 & {}[0.04, 1.00]\\
-$View_{neg} - Suppression$ & 0.318 & 0.050 & 351.000 & 6.370 & 0.000 & $8.60 \times 10^{10}$ & 0.10 & {}[0.06, 1.00]\\
-$Distraction - Distancing$ & -0.053 & 0.050 & 351.000 & -1.072 & 1.000 & 0.22 & 3.26e-03 & {}[0.00, 1.00]\\
-$Distraction - Suppression$ & -0.018 & 0.050 & 351.000 & -0.361 & 1.000 & $3.91 \times 10^{-2}$ & 3.70e-04 & {}[0.00, 1.00]\\
-$Distancing - Suppression$ & 0.035 & 0.050 & 351.000 & 0.711 & 1.000 & $9.86 \times 10^{-2}$ & 1.44e-03 & {}[0.00, 1.00]\\
-\bottomrule
-\end{tabular}
-
-}
-
-\end{threeparttable}
-\end{center}
-
-\end{table}
-
-\begin{figure}[H]
-\includegraphics[width=\textwidth]{figures/FigLevReg} \caption{Levator activity in mV visualized as boxplots. Dots represent individual Levator activity measures placed in 150 quantiles.}\label{fig:SupplFigLevReg}
-\end{figure}
-
-\newpage
-
-\hypertarget{exploratory-analysis-association-between-svs-and-self-control-and-nfc}{%
-\subsection{Exploratory analysis: Association between SVs and self-control and NFC}\label{exploratory-analysis-association-between-svs-and-self-control-and-nfc}}
-
-\begin{table}[H]
-
-\begin{center}
-\begin{threeparttable}
-
-\caption{\label{tab:TabExp}Exploratory analysis: Results of MLM predicting SVs of ER strategies with level 2 predictors self-control and NFC.}
-
-\begin{tabular}{llllll}
-\toprule
-Parameter & \multicolumn{1}{c}{Beta} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$p$-value} & \multicolumn{1}{c}{$f^{2}$} & \multicolumn{1}{c}{Random Effects (SD)}\\
-\midrule
-Intercept & $8.03 \times 10^{-1}$ & 0.011 & 0.000 &  & 0.112\\
-Effort & $-6.93 \times 10^{-4}$ & 0.000 & 0.000 & 0.036 & \\
-Utility & $1.44 \times 10^{-3}$ & 0.000 & 0.000 & 0.197 & \\
-Corrugator activity & $7.54 \times 10^{-3}$ & 0.004 & 0.034 & 0.001 & \\
-Self-Control & $2.44 \times 10^{-2}$ & 0.012 & 0.044 & 0.002 & \\
-NFC & $7.58 \times 10^{-4}$ & 0.001 & 0.436 & 0.002 & \\
-\bottomrule
-\end{tabular}
-
-\end{threeparttable}
-\end{center}
-
-\end{table}
 
 
 \end{document}
