--- a/06_Paper/COG-ED/Stage 2/Manuscript.tex
+++ b/06_Paper/COG-ED/Stage 2/Manuscript.tex
@@ -438,7 +438,7 @@ The paradigm code, the R script for analysis, and the R Markdown file used to co
 \hypertarget{protocol-registration}{%
 \subsection{Protocol registration}\label{protocol-registration}}
 
-The Stage 1 Registered Report protocol has been approved and is available at \href{https://osf.io/qa2bg/}{osf.io/qa2bg/}.
+The Stage 1 Registered Report protocol has been approved and is available at \href{https://osf.io/cpxth}{osf.io/cpxth/}.
 
 \hypertarget{results}{%
 \section{Results}\label{results}}
