--- a/06_Paper/COG-ED/Stage 2/Manuscript.tex
+++ b/06_Paper/COG-ED/Stage 2/Manuscript.tex
@@ -628,7 +628,8 @@ This means that across the whole sample, there was a steeper decline in SVs from
 
 {[}FIGURE \ref{fig:h3ac-plot} HERE{]}
 
-The rmANOVA on the association between NFC scores and NASA-TLX scores revealed a main effect of \(n\)-back level (\(F(2.10, 239.56) = 154.50\), \(p < .001\), \(\hat{\eta}^2_G = .223\), 90\% CI \([.159, .282]\), \(\mathrm{BF}_{\textrm{10}} = 2.22 \times 10^{45}\) \}\$) and an interaction between \(n\)-back level and NFC scores (\(F(2.10, 239.56) = 4.93\), \(p = .007\), \(\hat{\eta}^2_G = .009\), 90\% CI \([.000, .025]\)), but no main effect of NFC scores (\(F(1, 114) = 3.22\), \(p = .075\), \(\hat{\eta}^2_G = .022\), 90\% CI \([.000, .084]\), \(\mathrm{BF}_{\textrm{10}} = 1.75 \times 10^{2}\) \}\(). Post-hoc tests showed that the participants with NFC scores below the median had higher NASA-TLX scores for 3-back (\)t(114) = -2.15\$, \(p = .033\), \(\mathrm{BF}_{\textrm{10}} = 11.15\)) and for 4-back (\(t(114) = -2.89\), \(p = .005\), \(\mathrm{BF}_{\textrm{10}} = 336.88\)) than those with NFC scores above the median, so evidence was in favour of H3b.
+The rmANOVA on the association between NFC scores and NASA-TLX scores revealed a main effect of \(n\)-back level (\(F(2.10, 239.56) = 154.50\), \(p < .001\), \(\hat{\eta}^2_G = .223\), 90\% CI \([.159, .282]\), \(\mathrm{BF}_{\textrm{10}} = 2.22 \times 10^{45}\)) and an interaction between \(n\)-back level and NFC scores (\(F(2.10, 239.56) = 4.93\), \(p = .007\), \(\hat{\eta}^2_G = .009\), 90\% CI \([.000, .025]\)), but no main effect of NFC scores (\(F(1, 114) = 3.22\), \(p = .075\), \(\hat{\eta}^2_G = .022\), 90\% CI \([.000, .084]\), \(\mathrm{BF}_{\textrm{10}} = 1.75 \times 10^{2}\)).
+Post-hoc tests showed that the participants with NFC scores below the median had higher NASA-TLX scores for 3-back (\(t(114) = -2.15\), \(p = .033\), \(\mathrm{BF}_{\textrm{10}} = 11.15\)) and for 4-back (\(t(114) = -2.89\), \(p = .005\), \(\mathrm{BF}_{\textrm{10}} = 336.88\)) than those with NFC scores above the median, so evidence was in favour of H3b.
 Regardless of NFC scores, NASA-TLX scores were higher for the more difficult level in each pair of \(n\)-back levels (Figure~\ref{fig:h3b-plot}).
 
 {[}FIGURE \ref{fig:h3b-plot} HERE{]}
