--- a/06_Paper/ER-ED/ERED_Stage2/method.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/method.Rmd
@@ -232,4 +232,4 @@ The paradigm code, the R script for analysis, and the R Markdown file used to co
 
 ## Protocol registration
 
-The Stage 1 Registered Report protocol has been approved and is available at [osf.io/d6sc9/](https://osf.io/d6sc9/).
+The Stage 1 Registered Report protocol has been approved and is available at [https://osf.io/fn9bt](https://osf.io/fn9bt).
