--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -155,7 +155,7 @@
     {}{\InnerPatchFailed}%
   }
 {}{\PatchFailed}
-\keywords{emotion regulation, regulatory effort, effort discounting, registered report, emotion regulation choice, emotion regulation flexibility, electromyography\newline\indent Word count: 9432}
+\keywords{emotion regulation, regulatory effort, effort discounting, registered report, emotion regulation choice, emotion regulation flexibility, electromyography}
 \usepackage{lineno}
 
 \linenumbers
@@ -401,7 +401,7 @@ The items were rated on a 4-point scale ranging from ``strongly agree'' to ``str
 Further psychological constructs were assessed but had no clear hypotheses in the present work and are therefore investigated only exploratory:
 General psychological well-being was assessed using the German version of the WHO-5 scale\textsuperscript{45,46}.
 To measure resilience, the German version 10-item-form of the Connor-Davidson resilience Scale (CD-RISC)\textsuperscript{47--49} was used.
-Habitual use of ER will was assessed using the German version of the Emotion Regulation Questionnaire (ERQ)\textsuperscript{9,50}.
+Habitual use of ER was assessed using the German version of the Emotion Regulation Questionnaire (ERQ)\textsuperscript{9,50}.
 Implicit theories of willpower in emotion control was assessed using the implicit theories questionnaire from Bernecker and Job\textsuperscript{51}.
 To assess Need for Cognition, the German version short form of the Need for Cognition Scale\textsuperscript{28,52} was used.
 To assess self-control\textsuperscript{53}, sum scores of the German versions of the following questionnaires were used: the Self-Regulation Scale (SRS)\textsuperscript{54}, the Brief Self-Control Scale (BSCS)\textsuperscript{55,56}, and the Barratt Impulsiveness Scale (BIS-11)\textsuperscript{57,58}.
@@ -564,7 +564,7 @@ The paradigm code, the R script for analysis, and the R Markdown file used to co
 \hypertarget{protocol-registration}{%
 \subsection{Protocol registration}\label{protocol-registration}}
 
-The Stage 1 Registered Report protocol has been approved and is available at \href{https://osf.io/d6sc9/}{osf.io/d6sc9/}.
+The Stage 1 Registered Report protocol has been approved and is available at \url{https://osf.io/fn9bt}.
 
 \hypertarget{results}{%
 \section{3. Results}\label{results}}
