--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -522,7 +522,7 @@ The SVs of the fixed strategies lay between 0 and 1, with lower values indicatin
 The final SV per strategy for each participant was computed by averaging the SVs of each strategy across pairings.
 
 To explore the association between subjective effort (H5a), subjective arousal (H5b), subjective utility (H5c), and physiological responding (H5d,e) on SVs, a multilevel model (MLM) was specified using the \(lmerTest\) package\textsuperscript{67}.
-First, ER strategies were recoded and centered for each subject according to their individual SVs: The strategy with the highest SV will be coded as -1, the strategy with the second highest SV 0, and the strategy with the lowest SV will be coded as 1.
+First, ER strategies were recoded and centered for each subject according to their individual SVs: The strategy with the highest SV was coded as -1, the strategy with the second highest SV 0, and the strategy with the lowest SV was coded as 1.
 Restricted maximum likelihood (REML) was applied to fit the model.
 A random slopes model of SVs including subjective effort (effort ratings), subjective arousal (arousal ratings), utility (utility ratings), and physiological responses (\emph{corrugator} and \emph{levator} activity) as level-1-predictors was specified.
 \[
